--- a/frontend/src/app/main/gymsuser/gyms-grid-home/gyms-grid-home.component.css
+++ b/frontend/src/app/main/gymsuser/gyms-grid-home/gyms-grid-home.component.css
@@ -1,9 +1,10 @@
 .container {
     display: grid;
-    box-shadow: 0 2px 5px;
+    box-shadow: 0px 0px 30px #393e46;
     padding: 12px;
     width: 70%;
     cursor: pointer;
+    background-color: #ffffffd4;
 }
 .image1{
     width: 100%;
