--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -45,12 +45,6 @@
   gap:20px;
  
  }
- .logo{
-  width: 150px;
-  height: 150px;
-  border-radius: 50%;
- 
- }
  
  .titulo{
   margin-top:2rem;
@@ -89,3 +83,22 @@
       width: 90%;
     }
  
+    ///////////////////////GYM DETAIL FORM///////////////////////
+    .containerform{
+      display: flex;
+      flex-direction: column;
+      margin:5px
+    }
+    .datosform{
+      display: flex;
+      flex-direction: column;
+      gap:30px;
+      width: 80%;
+      justify-content: center;
+      align-content: center;
+    }
+    .logoform{
+      width: 500px;
+      height: 500px;
+      margin: -16px;
+     }
