--- a/frontend/src/app/main/gyms/gyms-home/gyms-home.component.html
+++ b/frontend/src/app/main/gyms/gyms-home/gyms-home.component.html
@@ -14,6 +14,7 @@
       columns="gymid;photo;name;address;city;cif;phone;email;schedule;description;rate;categories;image1;image2;image3"
       visible-columns="photo;name;city;schedule;rate;categories"
       delete-button="false"
+      refresh-button="false" 
       query-rows="20"
       store-state="no"
     >
