--- a/frontend/src/app/main/home/home.component.html
+++ b/frontend/src/app/main/home/home.component.html
@@ -1,5 +1,10 @@
-<div fxLayout="row" layout-padding fxLayoutAlign="center center">
+<!-- <div fxLayout="row" layout-padding fxLayoutAlign="center center">
   <p>
     Ontimize web seed application home component
   </p>
+</div> -->
+<div>
+<o-card-menu-layout>
+</o-card-menu-layout>
+
 </div>
