--- a/frontend/src/app/main/services-gymadmin/service-gymadmin-home/service-gymadmin-home.component.html
+++ b/frontend/src/app/main/services-gymadmin/service-gymadmin-home/service-gymadmin-home.component.html
@@ -14,8 +14,10 @@
       columns="serviceid;name;description;duration;price;categoryid;gymid;categories"
       visible-columns="name;description;duration;price;categories"
       delete-button="false"
+      refresh-button="false"
       query-rows="20"
       store-state="no"
+
     >
     </o-table>
   </div>
