--- a/frontend/src/app/main/gyms/gyms-new/gyms-new.component.html
+++ b/frontend/src/app/main/gyms/gyms-new/gyms-new.component.html
@@ -5,128 +5,143 @@
   header-actions="R;I;U;D"
   show-header-navigation="no"
 >
-<h2>{{ 'INFO' | oTranslate }}</h2>
-  <o-row>
-    <!-- Photo Column -->
-    <o-column title-label="Photo">
-      <o-image
-        id="photo"
-        attr="photo"
-        label=""
-        empty-image="assets/images/no-image.png"
-        sql-type="OTHER"
-      ></o-image>
-    </o-column>
+
+<div style="display: none">
+  <o-text-input
+    attr="gymid"
+    sql-type="INTEGER"
+    enabled="no"
+    visible="no"
+    (onChange)="loadRoute()"
+  ></o-text-input>
+</div>
+
+<div class="containerform">
+  <!-- <o-column title="{{ 'name' | oTranslate }}"></o-column> -->
+<div class="logoform">
+    <o-image
+      id="photo"
+      attr="photo"
+      label=""
+      empty-image="assets/images/no-image.png"
+      sql-type="OTHER"
+    ></o-image>
+  </div>
+
+  <!-- datos -->
+  <div class="datosform">
+    <h2 class ="title_info">{{ 'INFO' | oTranslate }}</h2>
 
     <!-- Name Column -->
-    <o-column fxFlex>
-      <o-row>
+    <div class="nameform">
       <o-text-input
-        class="input-padding"
+      class="input-padding"
         attr="name"
         fxFlex="40"
         required="yes"
       ></o-text-input>
-<!-- CIF Column -->
+
       <o-text-input
-        class="input-padding"
+      class="input-padding"
         attr="cif"
-        fxFlex="20"
+        fxFlex="40"
+        required="yes"
       ></o-text-input>
 
+      <!-- State Column -->
+      <o-slide-toggle
+      class="input-padding"
+      attr="state"
+      label="{{ 'state' | oTranslate }}"
+      [data]="getValue()"
+      read-only="no"
+      ></o-slide-toggle>
+    </div>
+    <div class="contactform">
+      <!-- Address Column -->
+      <o-text-input
+      class="input-padding"
+        attr="address"
+        fxFlex="40"
+        required="yes"
+      ></o-text-input>
 
-    <!-- Address Column -->
-
-      <o-text-input attr="address" fxFlex></o-text-input>
-
-
-    <!-- City Column -->
-
+      <!-- City Column -->
       <o-text-input
         class="input-padding"
         attr="city"
         fxFlex="20"
       ></o-text-input>
-    </o-row>
-    <o-row>
+      <!-- <o-nif-input attr="ID" class="input-padding" fxFlex="40" required="yes"></o-nif-input> -->
 
-    <!-- Phone Column -->
+      
+      </div>
+      <!-- Schedule Column -->
+      <div class="nameform">
 
+        <!-- Phone Column -->
       <o-integer-input
-        attr="phone"
-        class="input-padding"
-        step="0"
-        grouping="no"
-        fxFlex="40"
-      ></o-integer-input>
-    <!-- Schedule Column (assuming it's a text input) -->
+      attr="phone"
+      class="input-padding"
+      step="0"
+      grouping="no"
+      fxFlex="40"
+    ></o-integer-input>
+
       <o-text-input
-        class="input-padding"
+       
         attr="schedule"
         fxFlex="40"
       ></o-text-input>
-      <!-- State Column -->
-      <o-slide-toggle 
-      class="input-padding"
-      attr="state" 
-      label="{{ 'state' | oTranslate }}" 
-      [data]="getValue()" 
-      read-only="no"
-      ></o-slide-toggle>
-    </o-row>
-    <o-row>
-    <!-- Email Column -->
-
+      </div>
+      
+      <!-- Email Column -->
+      <div class="nameform">
       <o-email-input attr="email" fxFlex></o-email-input>
-
-    </o-row>
-    <o-row>
-
-
-
-    <!-- Description Column -->
-
+      </div>
+      <!-- Description Column -->
+      <div class="nameform">
       <o-textarea-input attr="description" fxFlex></o-textarea-input>
-    </o-row>
-    </o-column>
-  </o-row>
-
-  <h2>{{ 'gallery' | oTranslate }}</h2>
-  <div class="images">
-    <o-column>
-      <o-image
-        id="image1"
-        attr="image1"
-        label=""
-        empty-image="assets/images/no-image.png"
-        sql-type="OTHER"
-        type="image"
-        image-type="base64"
-      ></o-image>
-    </o-column>
-    <o-column>
-      <o-image
-        id="image2"
-        attr="image2"
-        label=""
-        empty-image="assets/images/no-image.png"
-        sql-type="OTHER"
-        type="image"
-        image-type="base64"
-      ></o-image>
-    </o-column>
-    <o-column>
-      <o-image
-        id="image3"
-        attr="image3"
-        label=""
-        empty-image="assets/images/no-image.png"
-        sql-type="OTHER"
-        type="image"
-        image-type="base64"
-      ></o-image>
-    </o-column>
-  </div>
+      </div>
+<!-- <div class="div_button_services">
+<o-button id="botton_service"type="RAISED" label="services" layout-padding color="primary" [routerLink] ="serviceRoute"></o-button>
+</div> -->
+</div>
+</div>
+<h2 class="galery_title">{{ 'gallery' | oTranslate }}</h2>
+<div class="images">
+  <o-column>
+    <o-image
+      id="image1"
+      attr="image1"
+      label=""
+      empty-image="assets/images/no-image.png"
+      sql-type="OTHER"
+      type="image"
+      image-type="base64"
+    ></o-image>
+  </o-column>
+  <o-column>
+    <o-image
+      id="image2"
+      attr="image2"
+      label=""
+      empty-image="assets/images/no-image.png"
+      sql-type="OTHER"
+      type="image"
+      image-type="base64"
+    ></o-image>
+  </o-column>
+  <o-column>
+    <o-image
+      id="image3"
+      attr="image3"
+      label=""
+      empty-image="assets/images/no-image.png"
+      sql-type="OTHER"
+      type="image"
+      image-type="base64"
+    ></o-image>
+  </o-column>
+</div>
 </o-form>
-
-
