--- a/frontend/src/app/main/gyms/gyms-home/gyms-home.component.html
+++ b/frontend/src/app/main/gyms/gyms-home/gyms-home.component.html
@@ -29,6 +29,11 @@
         image-type="base64"
       ></o-table-column>
      
+      <o-table-column attr="rate" title="rate" type="currency"
+      currency-symbol="★" currency-symbol-position="right" grouping="yes"
+      thousand-separator="." decimal-separator="," max-decimal-digits="0">
+      </o-table-column>
+
     </o-table>
   </div>
 </o-form-layout-manager>
