--- a/frontend/src/app/main/gyms/gyms-new/gyms-new.component.html
+++ b/frontend/src/app/main/gyms/gyms-new/gyms-new.component.html
@@ -41,12 +41,20 @@
         required="yes"
       ></o-text-input>
 
-      <o-text-input
+      <!-- cif Column -->
+      <!-- <o-text-input
       class="input-padding"
         attr="cif"
         fxFlex="40"
         required="yes"
-      ></o-text-input>
+      ></o-text-input> -->
+
+      <!-- <o-nif-input
+          attr="cif"
+          class="input-padding"
+          fxFlex="40"
+          required="yes">
+        </o-nif-input> -->
 
       <!-- State Column -->
       <o-slide-toggle
