--- a/frontend/src/app/main/services-gymadmin/service-gymadmin-new/service-gymadmin-new.component.html
+++ b/frontend/src/app/main/services-gymadmin/service-gymadmin-new/service-gymadmin-new.component.html
@@ -21,11 +21,11 @@
 
         <!-- Price Column -->
 
-        <o-integer-input attr="price" label="price"></o-integer-input>
+        <o-integer-input attr="price" label="pricelabel"></o-integer-input>
 
         <!-- Duration Column -->
 
-        <o-integer-input attr="duration" label="duration"></o-integer-input>
+        <o-integer-input attr="duration" label="durationlabel"></o-integer-input>
 
         <o-row>
             <o-combo attr="categoryid" label="category" fxFlex="50" service="categories" entity="category" keys="categoryid" columns="categoryid;name"
