permissions backend created

--- a/frontend/src/app/main/gyms/gyms-home/gyms-home.component.html
+++ b/frontend/src/app/main/gyms/gyms-home/gyms-home.component.html
@@ -9,7 +9,7 @@
     <o-table
       attr="gymsTable"
       service="gyms"
-      entity="gym"
+      entity="myGym"
       keys="gymid"
       columns="gymid;photo;name;address;city;cif;phone;email;schedule;description;rate;categories;image1;image2;image3"
       visible-columns="photo;name;city;schedule;rate;categories"
