--- a/frontend/src/app/main/gyms/gyms-detail/gyms-detail.component.html
+++ b/frontend/src/app/main/gyms/gyms-detail/gyms-detail.component.html
@@ -85,13 +85,13 @@
         <div class="nameform">
 
           <!-- Phone Column -->
-        <o-integer-input
+        <!-- <o-integer-input
         attr="phone"
         class="input-padding"
         step="0"
         grouping="no"
         fxFlex="40"
-      ></o-integer-input>
+      ></o-integer-input> -->
 
       <o-phone-input
         attr="phone"
