--- a/frontend/src/app/main/gymsuser/gyms-grid-home/gyms-grid-home.component.html
+++ b/frontend/src/app/main/gymsuser/gyms-grid-home/gyms-grid-home.component.html
@@ -35,9 +35,9 @@
       <mat-icon>schedule</mat-icon><span>{{ list.schedule }}</span>
     </div>
     
-    <div class="rate">
+    <!-- <div class="rate">
       <mat-icon [ngStyle]="{'color':'#B2A000'}">star</mat-icon><span>{{ list.rate }} {{ 'stars' | oTranslate }}</span>
-    </div>
+    </div> -->
     
     <div class="categories">
       <mat-icon>checklist</mat-icon><span>{{ list.categories }}</span>
