--- a/frontend/src/app/main/gyms/gyms-home/gyms-home.component.html
+++ b/frontend/src/app/main/gyms/gyms-home/gyms-home.component.html
@@ -12,7 +12,7 @@
       entity="myGym"
       keys="gymid"
       columns="gymid;photo;name;address;city;cif;phone;email;schedule;description;rate;categories;image1;image2;image3"
-      visible-columns="photo;name;city;schedule;rate;categories"
+      visible-columns="photo;name;city;schedule;categories"
       delete-button="false"
       refresh-button="false" 
       query-rows="20"
