--- a/frontend/src/app/main/gymsuser/gyms-grid-detail/gyms-grid-detail.component.html
+++ b/frontend/src/app/main/gymsuser/gyms-grid-detail/gyms-grid-detail.component.html
@@ -30,15 +30,16 @@
      <div class="datos">
       
       
-        <span class="city"
-          ><i>{{ data.city }}</i></span
-        >
-      
+        <span class="city">
+          <i>{{ data.city }}</i>
+        </span>
+
+        <span class="phone"><mat-icon>call</mat-icon>{{ data.phone }}</span>
 
         <span *ngIf="data.schedule">
           <mat-icon>schedule</mat-icon>Horario: {{ data.schedule }}
         </span>
-        <span *ngIf="data.rate"> <mat-icon [ngStyle]="{'color':'#B2A000'}">star</mat-icon> {{ data.rate }} {{ 'stars' | oTranslate }}</span>
+        <!-- <span *ngIf="data.rate"> <mat-icon [ngStyle]="{'color':'#B2A000'}">star</mat-icon> {{ data.rate }} {{ 'stars' | oTranslate }}</span> -->
         <span *ngIf="data.categories">
           <mat-icon>checklist</mat-icon>{{ data.categories }}
         </span>
