--- a/frontend/src/app/main/services-gymadmin/service-gymadmin-home/service-gymadmin-home.component.html
+++ b/frontend/src/app/main/services-gymadmin/service-gymadmin-home/service-gymadmin-home.component.html
@@ -9,10 +9,10 @@
     <o-table
       attr="servicesTable"
       service="gymservices"
-      entity="service"
+      entity="myService"
       keys="serviceid"
-      columns="serviceid;name;description;duration;price;categoryid;gymid;categories"
-      visible-columns="name;description;duration;price;categories"
+      columns="serviceid;name;description;duration;price;categoryid;gymid;categories;user_"
+      visible-columns="name;description;duration;price;categories;user_"
       delete-button="false"
       refresh-button="false"
       query-rows="20"
