--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -36,11 +36,16 @@
           <button mat-raised-button color="primary" type="submit">{{ 'LOGIN' | oTranslate }}</button>
           <div layout-padding></div>
           <div layout-padding></div>
+          <div layout-padding></div>
+          <div layout-padding></div>
+          <p></p>
           <!-- <div fxLayout="column" fxLayoutAlign="center center" layout-padding>
             <span class="login_info">{{ 'EXAMPLE_LOGIN_INFO' | oTranslate }}:</span>
             <span class="dark_text">{{ 'USERNAME' | oTranslate }} : demo</span>
             <span class="dark_text">{{ 'PASSWORD' | oTranslate }} : demouser</span>
           </div> -->
+          <span class="title_register">{{ 'REGISTER_TITLE' | oTranslate }}</span>
+          <button mat-raised-button color="accent" type="submit">{{ 'REGISTER' | oTranslate }}</button>
         </form>
       </div>
 
