--- a/frontend/src/app/main/services-gymadmin/service-gymadmin-home/service-gymadmin-home.component.html
+++ b/frontend/src/app/main/services-gymadmin/service-gymadmin-home/service-gymadmin-home.component.html
@@ -12,7 +12,7 @@
       entity="myService"
       keys="serviceid"
       columns="serviceid;name;description;duration;price;categoryid;gymid;categories;user_"
-      visible-columns="name;description;duration;price;categories;user_"
+      visible-columns="name;description;duration;price;categories"
       delete-button="false"
       refresh-button="false"
       query-rows="20"
