--- a/frontend/src/app/main/profiles/profile/profile.component.html
+++ b/frontend/src/app/main/profiles/profile/profile.component.html
@@ -1,158 +1,38 @@
-<o-form #form
-  service="users"
-  entity="user"
-  keys="user_"
-  header-actions="U;D"
-  show-header-navigation="no"
-  >
-  <!-- <div style="display: none">
-    <o-text-input
-      attr="gymid"
-      sql-type="INTEGER"
-      enabled="no"
-      visible="no"
-      (onChange)="loadRoute()"
-    ></o-text-input>
-  </div> -->
- 
-  <div class="containerform">
-    <!-- <o-column title="{{ 'name' | oTranslate }}"></o-column> -->
-  <!-- <div class="logoform">
-      <o-image
-        id="photo"
-        attr="photo"
-        label=""
-        empty-image="assets/images/no-image.png"
-        sql-type="OTHER"
-      ></o-image>
-    </div> -->
+<o-form class="login-form" #form mode="dialog"   message-service-type="customMessageServiceTypeUser" (onFormModeChange)="forceInsertMode($event)" (onInsert)="closeDialog($event)" service="users" entity="user"  show-header="no">
   
-    <!-- datos -->
-    <div class="datosform">
-      <h2 class ="title_info">{{ 'INFO' | oTranslate }}</h2>
-
-      <!-- Name Column -->
-      <div class="nameform">
-        <o-text-input
-        class="input-padding"
-          attr="name"
-          fxFlex="40"
-          required="yes"
-        ></o-text-input>
-         <!-- Surname Column -->
-      <div class="surnameform">
-        <o-text-input
-        class="input-padding"
-          attr="surname"
-          fxFlex="40"
-          required="yes"
-        ></o-text-input>
-
-        <!-- cif Column -->
-        <!-- <o-text-input
-        class="input-padding"
-          attr="cif"
-          fxFlex="40"
-          required="yes"
-        ></o-text-input> -->
-
-        <!-- <o-nif-input
-          attr="cif"
-          class="input-padding"
-          fxFlex="40"
-          required="yes">
-        </o-nif-input> -->
-
-        <!-- State Column
-        <o-slide-toggle
-        class="input-padding"
-        attr="state"
-        label="{{ 'state' | oTranslate }}"
-        [data]="getValue()"
-        read-only="no"
-        ></o-slide-toggle> -->
+  <o-row>
+    <o-column title="USER_PROFILE"  class="login-column">
+      <o-row>
+        <o-text-input class="input-padding" attr="name" width="250px" required="yes"></o-text-input>
+      </o-row>
+      <o-row>
+        <o-text-input class="input-padding" attr="surname" width="250px" required="yes"></o-text-input>
+      </o-row>
+      <o-row>
+        <o-text-input class="input-padding" attr="address" width="250px" required="yes"></o-text-input>
+      </o-row>
+      <o-row>
+        <o-text-input class="input-padding" attr="phone" width="250px" required="yes"></o-text-input>
+      </o-row>
+      <o-row>
+        <o-email-input attr="email" width="250px"></o-email-input>
+      </o-row>
+      <o-row>   
+        <o-text-input class="input-padding" attr="user_"  required="yes" width="250px"></o-text-input>
+      </o-row>
+      <o-row>
+        <o-password-input  class="input-padding" attr="password"  required="yes" width="250px" show-password-button="yes" (onChange)="reviewMatches($event)"></o-password-input>
+      </o-row>
+      <o-row>
+        <o-password-input  class="this.className" attr="confirm_password" width="250px" required="yes" show-password-button="yes" [validators]="validatorsConfirmPasswordArray">
+          <o-validator error-name="passwordsNotMatched" error-text="Password must match"></o-validator>
+        </o-password-input>
+      </o-row>   
+      <div class="ontimize-buttons">
+        <o-button attr="basic1" type="STROKED" label="CANCELAR" layout-padding color="primary" (click)="closeDialog()"></o-button>
+        <o-button attr="basic1" type="STROKED" label="REGISTRAR" layout-padding color="primary" (click)="send()"></o-button>
       </div>
-      <div class="contactform">
-        <!-- Address Column -->
-        <o-text-input
-        class="input-padding"
-          attr="address"
-          fxFlex="40"
-          required="yes"
-        ></o-text-input>
-
-        <!-- City Column -->
-        <o-text-input
-          class="input-padding"
-          attr="city"
-          fxFlex="20"
-        ></o-text-input>
-
-        </div>
-        
-        <div class="nameform">
-
-        <!-- Phone Column -->
-
-      <o-phone-input
-        attr="phone"
-        label="phone"
-        countries="+34"
-        data="+34"
-        read-only="no"
-        required="yes">
-      </o-phone-input>
-
+    </o-column>
     
-        </div>
-        
-        <!-- Email Column -->
-        <div class="nameform">
-        <o-email-input attr="email" fxFlex></o-email-input>
-        </div>
-        <!-- Description Column -->
-        <div class="nameform">
-        <o-textarea-input attr="description" fxFlex></o-textarea-input>
-        </div>
-  <!-- <div class="div_button_services">
-  <o-button id="botton_service"type="RAISED" label="services" layout-padding color="primary" [routerLink] ="serviceRoute"></o-button>
-</div> -->
-</div>
-</div>
-<h2 class="galery_title">{{ 'gallery' | oTranslate }}</h2>
-  <div class="images">
-    <o-column>
-      <o-image
-        id="image1"
-        attr="image1"
-        label=""
-        empty-image="assets/images/no-image.png"
-        sql-type="OTHER"
-        type="image"
-        image-type="base64"
-      ></o-image>
-    </o-column>
-    <o-column>
-      <o-image
-        id="image2"
-        attr="image2"
-        label=""
-        empty-image="assets/images/no-image.png"
-        sql-type="OTHER"
-        type="image"
-        image-type="base64"
-      ></o-image>
-    </o-column>
-    <o-column>
-      <o-image
-        id="image3"
-        attr="image3"
-        label=""
-        empty-image="assets/images/no-image.png"
-        sql-type="OTHER"
-        type="image"
-        image-type="base64"
-      ></o-image>
-    </o-column>
-  </div>
+  </o-row>
 </o-form>
