--- a/frontend/src/app/main/profiles/profile/profile.component.html
+++ b/frontend/src/app/main/profiles/profile/profile.component.html
@@ -1,4 +1,6 @@
-<o-form class="login-form" #form mode="dialog"   message-service-type="customMessageServiceTypeUser" (onFormModeChange)="forceInsertMode($event)" (onInsert)="closeDialog($event)" service="users" entity="user"  show-header="no">
+<o-form #form attr="profile_detail" service="users" entity="user" fxLayout="column"
+show-header="yes" header-actions="U" keys="user_" keys-sql-types="VARCHAR"
+show-header-navigation="yes" (onDataLoaded)="formInit()">
   
   <o-row>
     <o-column title="USER_PROFILE"  class="login-column">
@@ -9,7 +11,7 @@
         <o-text-input class="input-padding" attr="surname" width="250px" required="yes"></o-text-input>
       </o-row>
       <o-row>
-        <o-text-input class="input-padding" attr="address" width="250px" required="yes"></o-text-input>
+        <o-text-input class="input-padding" attr="address" width="250px" required="no"></o-text-input>
       </o-row>
       <o-row>
         <o-text-input class="input-padding" attr="phone" width="250px" required="yes"></o-text-input>
@@ -18,20 +20,19 @@
         <o-email-input attr="email" width="250px"></o-email-input>
       </o-row>
       <o-row>   
-        <o-text-input class="input-padding" attr="user_"  required="yes" width="250px"></o-text-input>
+        <o-text-input class="input-padding" attr="user_"  required="yes" width="250px" read-only="yes"></o-text-input>
       </o-row>
       <o-row>
         <o-password-input  class="input-padding" attr="password"  required="yes" width="250px" show-password-button="yes" (onChange)="reviewMatches($event)"></o-password-input>
       </o-row>
       <o-row>
-        <o-password-input  class="this.className" attr="confirm_password" width="250px" required="yes" show-password-button="yes" [validators]="validatorsConfirmPasswordArray">
-          <o-validator error-name="passwordsNotMatched" error-text="Password must match"></o-validator>
+        <o-password-input  class="this.className" attr="passwordconfirm" width="250px" required="yes" show-password-button="yes" [validators]="validatorArray">
+          <o-validator error-name="mustMatch" error-text="Password must match"></o-validator>
         </o-password-input>
-      </o-row>   
+      </o-row> 
       <div class="ontimize-buttons">
-        <o-button attr="basic1" type="STROKED" label="CANCELAR" layout-padding color="primary" (click)="closeDialog()"></o-button>
-        <o-button attr="basic1" type="STROKED" label="REGISTRAR" layout-padding color="primary" (click)="send()"></o-button>
-      </div>
+        <o-button attr="basic1" type="STROKED" label="BORRAR" layout-padding color="primary" (click)="deleteUser()"></o-button>
+      </div>  
     </o-column>
     
   </o-row>
