delete button still failed

--- a/frontend/src/app/main/profiles/profile/profile.component.html
+++ b/frontend/src/app/main/profiles/profile/profile.component.html
@@ -31,7 +31,7 @@ show-header-navigation="yes" (onDataLoaded)="formInit()">
         </o-password-input>
       </o-row> 
       <div class="ontimize-buttons">
-        <o-button attr="basic1" type="STROKED" label="BORRAR" layout-padding color="primary" (click)="deleteUser()"></o-button>
+        <o-button attr="basic1" type="STROKED" label="DELETE" layout-padding color="primary" (click)="deleteUser()"></o-button>
       </div>  
     </o-column>
     
