qr component finished

--- a/frontend/src/app/main/access-card/access-card/access-card.component.html
+++ b/frontend/src/app/main/access-card/access-card/access-card.component.html
@@ -1,19 +1,26 @@
 <o-form #form attr="profile_detail" service="users" entity="user" fxLayout="column"
 show-header="no" header-actions="U" keys="user_" keys-sql-types="VARCHAR"
 show-header-navigation="yes">
-  
-<o-text-input class="input-padding" attr="name" width="375px" required="yes" enabled="no"></o-text-input>
+            
     <div class="ontimize-buttons">
-        <o-button attr="basic1" type="STROKED" label="GENERATE_QR" layout-padding color="primary" (click)="deleteUser()"></o-button>
+        <button
+            mat-raised-button
+            color="primary"
+            class="buttonqr"
+            (click)="showQr()">{{ 'GENERATE_QR' | oTranslate }}
+        </button>
     </div>
 
+    <div id="qrid" style="display: none;">
+        <qrcode
+            [qrdata]="myAngularxQrCode"
+            [width]="300"
+            [errorCorrectionLevel]="'M'"
+            class="bshadow">
+        </qrcode>
+    </div>
 </o-form>
-<qrcode
-    [qrdata]="myAngularxQrCode"
-    [width]="256"
-    [errorCorrectionLevel]="'M'"
-    class="bshadow"
->
-    </qrcode>
+
+
 
 
