--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -29,6 +29,11 @@
 .mat-flat-button.mat-primary, .mat-raised-button.mat-primary, .mat-fab.mat-primary, .mat-mini-fab.mat-primary {
   background-color: #B2A000 ;
  }
+
+ 
+ .mat-stroked-button .mat-button-base .mat-primary .ng-star-inserted .buttonqr{
+  padding: 50px;
+}
  
 
 /////////////////////////////  detalle del grid usuario usuario//////////////////////
