--- a/frontend/src/app/main/access-card/access-card/access-card.component.css
+++ b/frontend/src/app/main/access-card/access-card/access-card.component.css
@@ -5,14 +5,18 @@
     justify-content: center;
     filter: drop-shadow(5px 5px 5px #222222);
     opacity: .5;
-   
+    margin-top: 20px;
   }
-   
-  textarea {
-      margin-top: 15px; 
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
-      width: 250px;
-      opacity: .5;
+  
+  .ontimize-buttons {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 40px;
+  }
+  
+  .buttonqr {
+    padding: 12px 12px 12px 12px;
+    height: 60px;
+    width: 140px;
+    box-shadow: 5px 7px 15px rgba(0, 0, 0, 0.351);
   }
