--- a/frontend/src/app/main/main.component.html
+++ b/frontend/src/app/main/main.component.html
@@ -1,3 +1,5 @@
 <o-app-layout show-language-selector="yes">
+  <o-user-info-configuration show-profile="yes" show-settings="no" [routerLink] ="['./main/profile']">
+  </o-user-info-configuration>
   <router-outlet></router-outlet>
 </o-app-layout>
