logout profile added

--- a/frontend/src/app/main/access-card/access-card/access-card.component.html
+++ b/frontend/src/app/main/access-card/access-card/access-card.component.html
@@ -13,7 +13,7 @@ show-header-navigation="yes">
  
     <div id="qrid" style="display: none;">
         <qrcode
-            [qrdata]="data.name + data.surname"
+            [qrdata]="data.name +' '+ data.surname +': '+ 'Acceso permitido'" 
             [width]="300"
             [errorCorrectionLevel]="'M'"
             class="bshadow">
