kenneth changes added

--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -2,6 +2,9 @@
   <div class="login-outer-container">
 
     <div class="login-bg-container">
+      <video autoplay muted loop>
+        <source src="../../assets/images/WheGymVideo.mp4" type="video/mp4">
+    </video>
     </div>
 
     <div class="wrapp-login">
