--- a/frontend/src/app/main/home/home.component.html
+++ b/frontend/src/app/main/home/home.component.html
@@ -3,6 +3,6 @@
     Ontimize web seed application home component
   </p>
 </div> -->
-<div>
+<div fxLayout="row" layout-padding fxLayoutAlign="center center">
 
 </div>
