--- a/frontend/src/app/main/access-card/access-card/access-card.component.html
+++ b/frontend/src/app/main/access-card/access-card/access-card.component.html
@@ -3,12 +3,13 @@ show-header="no" header-actions="U" keys="user_" keys-sql-types="VARCHAR"
 show-header-navigation="yes">
            
     <div class="ontimize-buttons">
-        <button
+        <p id="status"></p>
+        <!-- <button
             mat-raised-button
             color="primary"
             class="buttonqr"
             (click)="showQr()">{{ 'GENERATE_QR' | oTranslate }}
-        </button>
+        </button> -->
     </div>
  
     <div id="qrid" style="display: none;">
