video login added

--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -3,7 +3,7 @@
 
     <div class="login-bg-container">
       <video autoplay muted loop>
-        <source src="../../assets/images/WheGymVideo.mp4" type="video/mp4">
+        <source src="../../assets/images/whevideo.mp4" type="video/mp4">
     </video>
     </div>
 
