change icon profile

--- a/frontend/src/app/main/home/home.component.html
+++ b/frontend/src/app/main/home/home.component.html
@@ -4,5 +4,7 @@
   </p>
 </div> -->
 <div fxLayout="row" layout-padding fxLayoutAlign="center center">
-
+  <o-card-menu-layout parent-menu-id="views">
+    <o-card-menu-item button-text="Show" title="Documentation"></o-card-menu-item>
+  </o-card-menu-layout>
 </div>
