--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -126,10 +126,16 @@
   margin-top: 3rem;
 }
 
-.application-layout-content-wrapper:has(.o-menu-layout .scrolling)  {
+.application-layout-content-wrapper:has(.hijo)  {
   height: 100vh;
   background-image: linear-gradient(to bottom, rgba(112, 111, 105, 0.2) 0%, rgba(54, 53, 42, 0.56) 100%), url("^assets/images/fondo-login.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-color: #ECEFF1;
+}
+
+
+.o-card-menu-item {
+    margin: 2%;
+    padding: 12px;
 }
