--- a/frontend/src/app/main/gyms/gyms-new/gyms-new.component.html
+++ b/frontend/src/app/main/gyms/gyms-new/gyms-new.component.html
@@ -59,6 +59,7 @@
       <!-- State Column -->
       <o-slide-toggle
       class="input-padding"
+      color="primary"
       attr="state"
       label="{{ 'state' | oTranslate }}"
       [data]="getValue()"
