--- a/frontend/src/app/main/home/home.component.html
+++ b/frontend/src/app/main/home/home.component.html
@@ -5,7 +5,7 @@
 </div> -->
 <div  class ="hijo"fxLayout="row" layout-padding fxLayoutAlign="center center">
   
-  <o-card-menu-item class="admin" button-text="MY_GYMS" title=""
+  <o-card-menu-item class="admin" button-text="MY_GYMS" title="" button-color="white"
  icon="fitness_center" route="/main/gyms">
 </o-card-menu-item>
   <o-card-menu-item  id="service" button-text= "MY_SERVICES" title="" 
