--- a/frontend/src/app/login/login.component.scss
+++ b/frontend/src/app/login/login.component.scss
@@ -19,7 +19,7 @@
     display: flex;
   
     .login-bg-container {
-      background-image: url("^assets/images/fondo-login.jpg");
+     // background-image: url("^assets/images/fondo-login.jpg");
       width: calc(100% - 500px);
       height: 100vh;
    
