--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -139,3 +139,7 @@
     margin: 2%;
     padding: 12px;
 }
+.o-card-menu-item .mat-button {
+  background-color:#B2A000 !important;
+  color:white !important;
+}
