--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -143,3 +143,6 @@
   background-color:#B2A000 !important;
   color:white !important;
 }
+.o-card-menu-item .o-card-menu-item-icon{
+  color:#B2A000 !important;
+}
